增加穿越计算机的迷雾笔记

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         .ft14{ font-size: 14px;}
         .ft12{ font-size: 12px;}
 
-        .slide{ width: 50%; position: absolute; left: -50%; top: 0; height: 100%; overflow-y: scroll; border-right: 3px; box-shadow: 0 3px 3px #ccc; background: #fff; transition: 0.3s;}
+        .slide{ width: 50%; position: fixed; left: -50%; top: 0; height: 100%; overflow-y: scroll; border-right: 3px; box-shadow: 0 3px 3px #ccc; background: #fff; transition: 0.3s;}
         .slide.in{ left: 0;}
         .study-list .study-title{ height: 40px; border-bottom: 1px solid #eee; line-height: 40px; padding-left: 10px; text-shadow: 1px 1px 2px #888;}
         .study-list .study-item{ height: 30px; line-height: 30px; padding-left: 20px; padding-right: 20px;}
